--- a/common/config/azure-pipelines/jobs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs-build.yaml
@@ -21,6 +21,15 @@ parameters:
     type: boolean
     default: false
 
+resources:
+  pipelines:
+  - pipeline: itwinjs-docs
+    source: iTwin.js/Docs/iTwin.js Docs - YAML
+    branch: master
+  - pipeline: bis-docs
+    source: BIS/Generate-Schema-Markdown-(GitHub)
+    branch: master
+
 jobs:
   - job:
     workspace:
