--- a/common/config/azure-pipelines/jobs/docs-ci.yaml
+++ b/common/config/azure-pipelines/jobs/docs-ci.yaml
@@ -31,8 +31,9 @@ resources:
     source: BIS/Generate-Schema-Markdown-(GitHub)
     branch: master
 
-template: ./docs-build.yaml
-parameters:
-  workingDir: $(Pipeline.Workspace)/itwinjs-core
-  outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
-  shouldPublish: ${{ and(eq(variables['Build.Reason'], 'IndividualCI'), or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release'))) }}
+jobs:
+- template: ./docs-build.yaml
+  parameters:
+    workingDir: $(Pipeline.Workspace)/itwinjs-core
+    outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
+    shouldPublish: ${{ and(eq(variables['Build.Reason'], 'IndividualCI'), or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release'))) }}
