revert display name changes

--- a/common/config/azure-pipelines/jobs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs-build.yaml
@@ -131,12 +131,12 @@ jobs:
       # Update the .updated.json file after the bmsBuild
       - publish: ${{ parameters.stagingDir }}/config/.updated.json
         artifact: .updated.json
-        displayName: Publish .updated.json
+        displayName: Publish Pipeline Artifact - .updated.json
         condition: and(succeeded(), eq('${{ parameters.shouldPublish }}', true))
 
       - publish: ${{ parameters.outputDir }}
         artifact: DocsBuild
-        displayName: Publish DocsBuild
+        displayName: Publish Pipeline Artifact -  DocsBuild
         condition: and(succeeded(), eq('${{ parameters.shouldPublish }}', true))
 
       - powershell: |
