--- a/ui/appui-layout-react/package.json
+++ b/ui/appui-layout-react/package.json
@@ -66,7 +66,6 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-transition-group": "^4.4.4",
     "@types/sinon": "^9.0.0",
-    "@types/uuid": "^7.0.2",
     "chai": "^4.1.2",
     "chai-as-promised": "^7",
     "chai-jest-snapshot": "^2.0.0",
@@ -102,8 +101,7 @@
     "classnames": "^2.3.1",
     "immer": "9.0.6",
     "lodash": "^4.17.10",
-    "react-transition-group": "^4.4.2",
-    "uuid": "^7.0.3"
+    "react-transition-group": "^4.4.2"
   },
   "nyc": {
     "extends": "./node_modules/@itwin/build-tools/.nycrc",
