--- a/tools/certa/package.json
+++ b/tools/certa/package.json
@@ -31,6 +31,7 @@
     "url": "http://www.bentley.com"
   },
   "dependencies": {
+    "@itwin/core-bentley": "workspace:*",
     "detect-port": "~1.3.0",
     "express": "^4.16.3",
     "jsonc-parser": "~2.0.3",
@@ -38,7 +39,6 @@
     "mocha": "^10.0.0",
     "puppeteer": "15.5.0",
     "source-map-support": "^0.5.6",
-    "uuid": "^7.0.3",
     "yargs": "^17.4.0"
   },
   "devDependencies": {
@@ -50,7 +50,6 @@
     "@types/lodash": "^4.14.0",
     "@types/mocha": "^8.2.2",
     "@types/node": "18.11.5",
-    "@types/uuid": "^7.0.2",
     "@types/yargs": "^17.0.10",
     "electron": "^17.0.0",
     "eslint": "^7.11.0",
