--- a/common/config/azure-pipelines/jobs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs-build.yaml
@@ -62,64 +62,11 @@ jobs:
         workingDirectory: ${{ parameters.workingDir }}
 
       # Gather all the pieces to run BeMetalsmith
-      - script: |
-          mkdir ${{ parameters.stagingDir }}\reference\
-          echo Copying all reference files to staging
-          robocopy /E generated-docs\core\ ${{ parameters.stagingDir }}\reference\
-          if %errorlevel% GEQ 8 exit 1
-          robocopy /E generated-docs\ui\ ${{ parameters.stagingDir }}\reference\
-          if %errorlevel% GEQ 8 exit 1
-          robocopy /E generated-docs\presentation\ ${{ parameters.stagingDir }}\reference\
-          if %errorlevel% GEQ 8 exit 1
-          robocopy /E generated-docs\domains\ ${{ parameters.stagingDir }}\reference\
-          if %errorlevel% GEQ 8 exit 1
-          echo Copying extracted code to staging
-          mkdir ${{ parameters.stagingDir }}\extract\
-          robocopy /E generated-docs\extract\ ${{ parameters.stagingDir }}\extract\
-          if %errorlevel% GEQ 8 exit 1
-
-          echo Copying all files from \docs folder
-          robocopy /E docs\ ${{ parameters.stagingDir }}\
-          if %errorlevel% GEQ 8 exit 1
-          exit 0
-        workingDirectory: ${{ parameters.workingDir }}
-        displayName: Copy Reference files to Staging
-
-      # Download bis docs artifact
-      - ${{ if eq(parameters.useCurrentBisDocsArtifact, true) }}:
-        - download: current
-          artifact: Bis Docs
-          displayName: Download Bis Docs Artifact
-
-      - ${{ else }}:
-        - task: DownloadPipelineArtifact@2
-          displayName: Download Bis Docs Artifact
-          inputs:
-            buildType: specific
-            project: 2c48216e-e72f-48b4-a4eb-40ff1c04e8e4
-            pipeline: 6075
-            buildVersionToDownload: latestFromBranch
-            branchName: refs/heads/master
-            artifactName: Bis Docs
-            targetPath: $(Pipeline.Workspace)/Bis Docs
-
-      - task: CopyFiles@2
-        displayName: Copy Bis Docs to staging
-        inputs:
-          SourceFolder: $(Pipeline.Workspace)/Bis Docs
-          TargetFolder: ${{ parameters.stagingDir }}/bis/domains/
-
-      # The .updated.json is cached to track when the docs were last updated
-      - task: DownloadPipelineArtifact@2
-        displayName: Download .updated.json
-        inputs:
-          buildType: specific
-          project: 2c48216e-e72f-48b4-a4eb-40ff1c04e8e4
-          pipeline: 7436 # iTwin.js/Docs/iTwin.js Docs - YAML
-          buildVersionToDownload: latestFromBranch
-          branchName: refs/heads/master
-          artifactName: .updated.json
-          targetPath: ${{ parameters.stagingDir }}/config/
+      - template: ../templates/gather-docs.yaml
+        parameters:
+          workingDir: ${{ parameters.workingDir }}
+          stagingDir: ${{ parameters.stagingDir }}
+          useCurrentBisDocsArtifact: ${{ parameters.useCurrentBisDocsArtifact }}
 
       # Currently BeMetalsmith is an internal only tool
       - script: npm install @bentley/bemetalsmith@4.x
