--- a/common/config/azure-pipelines/jobs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs-build.yaml
@@ -61,7 +61,7 @@ jobs:
         displayName: rush docs
         workingDirectory: ${{ parameters.workingDir }}
 
-      # Gather all the pieces to run BeMetalsmith
+      # Gathers all the pieces to run BeMetalsmith
       - template: ../templates/gather-docs.yaml
         parameters:
           workingDir: ${{ parameters.workingDir }}
