--- a/common/config/azure-pipelines/templates/gather-docs.yaml
+++ b/common/config/azure-pipelines/templates/gather-docs.yaml
@@ -36,7 +36,7 @@ steps:
     workingDirectory: ${{ parameters.workingDir }}
     displayName: Copy Reference files to Staging
 
-  # Download bis docs artifact
+  # Download BIS Docs artifact
   - ${{ if eq(parameters.useCurrentBisDocsArtifact, true) }}:
     - download: current
       artifact: Bis Docs
@@ -62,7 +62,7 @@ steps:
 
   # The .updated.json is cached to track when the docs were last updated
   - task: DownloadPipelineArtifact@2
-    displayName: Download .updated.json
+    displayName: Download Pipeline Artifact - .updated.json
     inputs:
       buildType: specific
       project: 2c48216e-e72f-48b4-a4eb-40ff1c04e8e4
