add vhacd-js dependency to display-test-app

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -1095,6 +1095,10 @@
       "allowedCategories": [ "frontend", "tools" ]
     },
     {
+      "name": "vhacd-js",
+      "allowedCategories": [ "internal" ]
+    },
+    {
       "name": "webpack",
       "allowedCategories": [ "backend", "common", "frontend", "integration-testing", "internal", "tools" ]
     },
