--- a/common/config/azure-pipelines/jobs/fast-ci.yaml
+++ b/common/config/azure-pipelines/jobs/fast-ci.yaml
@@ -35,19 +35,19 @@ jobs:
           OS: windows-latest
           platform: Windows_NT
           name: $(win_pool)
-        "Linux_Node_18":
-          OS: ubuntu-latest
-          platform: Linux
-          name: $(linux_pool)
-        "MacOS_Node_18":
-          OS: macOS-latest
-          platform: Darwin
-          name: $(mac_pool)
+        # "Linux_Node_18":
+        #   OS: ubuntu-latest
+        #   platform: Linux
+        #   name: $(linux_pool)
+        # "MacOS_Node_18":
+        #   OS: macOS-latest
+        #   platform: Darwin
+        #   name: $(mac_pool)
 
     pool:
-      name: $(name)
-      demands:
-        - Agent.OS -equals $(platform)
+      name: iTwin Windows Testing
+      # demands:
+      #   - Agent.OS -equals $(platform)
 
     timeoutInMinutes: 60
 
