--- a/common/config/azure-pipelines/templates/gather-docs.yaml
+++ b/common/config/azure-pipelines/templates/gather-docs.yaml
@@ -8,7 +8,7 @@ parameters:
   - name: stagingDir
     type: string
     default: $(System.ArtifactsDirectory)/staging/
-  - name: downloadCurrentBuildArtifacts
+  - name: useCurrentBisDocsArtifact
     type: boolean
     default: false
 
@@ -36,33 +36,28 @@ steps:
     workingDirectory: ${{ parameters.workingDir }}
     displayName: Copy Reference files to Staging
 
-  # BIS Docs are pulled from a separate internal build
-  - task: DownloadBuildArtifacts@0
-    displayName: Download Bis Docs Artifacts
-    inputs:
-      buildType: specific
-      project: 2c48216e-e72f-48b4-a4eb-40ff1c04e8e4
-      pipeline: 6075
-      buildVersionToDownload: latest
-      allowPartiallySucceededBuilds: true
-      artifactName: Bis Docs
-    condition: and(succeeded(), eq('${{ parameters.downloadCurrentBuildArtifacts }}', false))
+  # Download BIS Docs artifact
+  - ${{ if eq(parameters.useCurrentBisDocsArtifact, true) }}:
+    - download: current
+      artifact: Bis Docs
+      displayName: Download Bis Docs Artifact
 
-  # BIS Docs are pulled from the current build for the validation
-  - task: DownloadBuildArtifacts@0
-    displayName: Download Current Bis Docs Artifacts
-    inputs:
-      buildType: current
-      project: 2c48216e-e72f-48b4-a4eb-40ff1c04e8e4
-      pipeline: 6075
-      allowPartiallySucceededBuilds: true
-      artifactName: Bis Docs
-    condition: and(succeeded(), eq('${{ parameters.downloadCurrentBuildArtifacts }}', true))
+  - ${{ else }}:
+    - task: DownloadPipelineArtifact@2
+      displayName: Download Bis Docs Artifact
+      inputs:
+        buildType: specific
+        project: 2c48216e-e72f-48b4-a4eb-40ff1c04e8e4
+        pipeline: 6075
+        buildVersionToDownload: latestFromBranch
+        branchName: refs/heads/master
+        artifactName: Bis Docs
+        targetPath: $(Pipeline.Workspace)/Bis Docs
 
   - task: CopyFiles@2
     displayName: Copy Bis Docs to staging
     inputs:
-      SourceFolder: "$(System.ArtifactsDirectory)/Bis Docs"
+      SourceFolder: $(Pipeline.Workspace)/Bis Docs
       TargetFolder: ${{ parameters.stagingDir }}/bis/domains/
 
   # The .updated.json is cached to track when the docs were last updated
@@ -70,9 +65,8 @@ steps:
     displayName: Download Pipeline Artifact - .updated.json
     inputs:
       buildType: specific
-      project: '2c48216e-e72f-48b4-a4eb-40ff1c04e8e4'
-      definition: 7436 # iTwin.js/Docs/iTwin.js Docs - YAML
-      allowPartiallySucceededBuilds: true
+      project: 2c48216e-e72f-48b4-a4eb-40ff1c04e8e4
+      pipeline: 7436 # iTwin.js/Docs/iTwin.js Docs - YAML
       buildVersionToDownload: latestFromBranch
       branchName: refs/heads/master
       artifactName: .updated.json
