--- a/tools/extension-webpack/package.json
+++ b/tools/extension-webpack/package.json
@@ -54,7 +54,7 @@
     "sass-loader": "^10.1.0",
     "source-map-loader": "^1.0.0",
     "style-loader": "^1.1.3",
-    "svg-sprite-loader": "4.2.1",
+    "svg-sprite-loader": "^6.0.10",
     "terser-webpack-plugin": "3.0.7",
     "ts-loader": "^6.0.4",
     "typescript": "~4.3.0",
