--- a/ui/ninezone/package.json
+++ b/ui/ninezone/package.json
@@ -93,7 +93,7 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "immer": "^9.0.1",
-    "svg-sprite-loader": "4.2.1",
+    "svg-sprite-loader": "^6.0.10",
     "uuid": "^7.0.3"
   },
   "nyc": {
