--- a/core/backend/package.json
+++ b/core/backend/package.json
@@ -4,6 +4,7 @@
   "description": "iTwin.js backend components",
   "main": "lib/cjs/core-backend.js",
   "typings": "lib/cjs/core-backend",
+  "//typings": "lib/internal-types/itwin__core-backend/lib/cjs/core-backend",
   "license": "MIT",
   "engines": {
     "node": ">=12.22.0 < 14.0 || >=14.17.0 < 19.0"
