--- a/core/backend/package.json
+++ b/core/backend/package.json
@@ -3,8 +3,8 @@
   "version": "3.6.0-dev.38",
   "description": "iTwin.js backend components",
   "main": "lib/cjs/core-backend.js",
-  "typings": "lib/cjs/core-backend",
-  "//typings": "lib/internal-types/itwin__core-backend/lib/cjs/core-backend",
+  "//typings": "lib/cjs/core-backend",
+  "typings": "lib/internal-types/itwin__core-backend/lib/cjs/core-backend",
   "license": "MIT",
   "engines": {
     "node": ">=12.22.0 < 14.0 || >=14.17.0 < 19.0"
