--- a/common/config/azure-pipelines/jobs/docs-ci.yaml
+++ b/common/config/azure-pipelines/jobs/docs-ci.yaml
@@ -27,4 +27,4 @@ jobs:
   parameters:
     workingDir: $(Pipeline.Workspace)/itwinjs-core
     outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
-    shouldPublish: ${{ or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release'))) }}
+    shouldPublish: ${{ or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release')) }}
