--- a/.github/workflows/extract-api.yaml
+++ b/.github/workflows/extract-api.yaml
@@ -46,8 +46,9 @@ jobs:
         shell: bash
         run: |
           if [ $(git status --porcelain | wc -l) -ne "0" ]; then
-            echo "There are uncommitted changes"
-            git status --porcelain
+            echo "The following file(s) contain uncommitted changes:"
+            git status --porcelain -u
+            echo "Please do the following:\n1. run extract-api in the core/extension dir \n2. commit the modified generated extension api files (found in the core/frontend and core/extension dirs) \n3. run rush change and commit the change files for core-frontend and core-extension"
             exit 1
           fi
 
