Disable deprecation in tests.

--- a/ui/appui-abstract/package.json
+++ b/ui/appui-abstract/package.json
@@ -104,6 +104,16 @@
     ],
     "rules": {
       "max-statements-per-line": "off"
-    }
+    },
+    "overrides": [
+      {
+        "files": [
+          "src/test/**/*"
+        ],
+        "rules": {
+          "deprecation/deprecation": "off"
+        }
+      }
+    ]
   }
 }
