--- a/ui/appui-react/package.json
+++ b/ui/appui-react/package.json
@@ -168,6 +168,16 @@
     "extends": [
       "plugin:@itwin/ui",
       "plugin:@itwin/jsdoc"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "src/test/**/*"
+        ],
+        "rules": {
+          "deprecation/deprecation": "off"
+        }
+      }
     ]
   }
 }
