--- a/common/config/azure-pipelines/jobs/docs-ci.yaml
+++ b/common/config/azure-pipelines/jobs/docs-ci.yaml
@@ -9,6 +9,9 @@ trigger:
       - release/2*
       - release/1*
 
+variables:
+  - group: Rush Build Cache SAS Token
+
 pr:
   drafts: false
   branches:
@@ -23,8 +26,8 @@ pr:
       - .github/CODEOWNERS
 
 jobs:
-- template: ./docs-build.yaml
-  parameters:
-    workingDir: $(Pipeline.Workspace)/itwinjs-core
-    outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
-    shouldPublish: ${{ or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release')) }}
+  - template: ./docs-build.yaml
+    parameters:
+      workingDir: $(Pipeline.Workspace)/itwinjs-core
+      outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
+      shouldPublish: ${{ or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release')) }}
