--- a/common/config/azure-pipelines/templates/gather-docs.yaml
+++ b/common/config/azure-pipelines/templates/gather-docs.yaml
@@ -18,7 +18,7 @@ steps:
     displayName: Install fs-extra
     workingDirectory: ${{ parameters.workingDir }}
   # Call the copying script
-  - script: node common/scripts/copyReferenceFilesToStaging.js
+  - script: node common/scripts/copyReferenceFilesToStaging.js ${{ parameters.stagingDir }}
     displayName: Copy Reference files to Staging
     workingDirectory: ${{ parameters.workingDir }}
 
