add artifact publish condition

--- a/common/config/azure-pipelines/jobs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs-build.yaml
@@ -84,10 +84,12 @@ jobs:
       - publish: ${{ parameters.stagingDir }}/config/.updated.json
         artifact: .updated.json
         displayName: Publish Pipeline Artifact - .updated.json
+        condition: and(succeeded(), eq('${{ parameters.shouldPublish }}', true))
 
       - publish: ${{ parameters.outputDir }}
         artifact: DocsBuild
         displayName: Publish Pipeline Artifact - DocsBuild
+        condition: and(succeeded(), eq('${{ parameters.shouldPublish }}', true))
 
       - powershell: |
           $commitMsg = "$(Build.SourceVersionMessage)"
@@ -98,3 +100,4 @@ jobs:
             Write-Host `'$commitMsg`'` is not a version bump
           }
         displayName: Tag release if version bump
+        condition: and(succeeded(), eq('${{ parameters.shouldPublish }}', true))
