--- a/tools/certa/package.json
+++ b/tools/certa/package.json
@@ -49,7 +49,7 @@
     "@types/lodash": "^4.14.0",
     "@types/mocha": "^8.2.2",
     "@types/node": "18.11.5",
-    "@types/yargs": "^17.0.10",
+    "@types/yargs": "17.0.19",
     "electron": "^22.0.0",
     "eslint": "^7.11.0",
     "nyc": "^15.1.0",
