--- a/tools/certa/package.json
+++ b/tools/certa/package.json
@@ -57,7 +57,7 @@
     "typescript": "~4.4.0"
   },
   "peerDependencies": {
-    "electron": ">=14.0.0 <18.0.0 || >=22.0.0 <23.0.0"
+    "electron": "^22.0.0"
   },
   "peerDependenciesMeta": {
     "electron": {
