--- a/common/config/azure-pipelines/templates/gather-docs.yaml
+++ b/common/config/azure-pipelines/templates/gather-docs.yaml
@@ -13,28 +13,14 @@ parameters:
     default: false
 
 steps:
-  - script: |
-      mkdir ${{ parameters.stagingDir }}\reference\
-      echo Copying all reference files to staging
-      robocopy /E generated-docs\core\ ${{ parameters.stagingDir }}\reference\
-      if %errorlevel% GEQ 8 exit 1
-      robocopy /E generated-docs\ui\ ${{ parameters.stagingDir }}\reference\
-      if %errorlevel% GEQ 8 exit 1
-      robocopy /E generated-docs\presentation\ ${{ parameters.stagingDir }}\reference\
-      if %errorlevel% GEQ 8 exit 1
-      robocopy /E generated-docs\domains\ ${{ parameters.stagingDir }}\reference\
-      if %errorlevel% GEQ 8 exit 1
-      echo Copying extracted code to staging
-      mkdir ${{ parameters.stagingDir }}\extract\
-      robocopy /E generated-docs\extract\ ${{ parameters.stagingDir }}\extract\
-      if %errorlevel% GEQ 8 exit 1
-
-      echo Copying all files from \docs folder
-      robocopy /E docs\ ${{ parameters.stagingDir }}\
-      if %errorlevel% GEQ 8 exit 1
-      exit 0
+  # build script exists outside of any project so manually install fs-extra
+  - script: npm install fs-extra
+    displayName: Install fs-extra
     workingDirectory: ${{ parameters.workingDir }}
+  # Call the copying script
+  - script: node common/scripts/copyReferenceFilesToStaging.js ${{ parameters.stagingDir }}
     displayName: Copy Reference files to Staging
+    workingDirectory: ${{ parameters.workingDir }}
 
   # Download BIS Docs artifact
   - ${{ if eq(parameters.useCurrentBisDocsArtifact, true) }}:
