Update template path

--- a/common/config/azure-pipelines/ci.yaml
+++ b/common/config/azure-pipelines/ci.yaml
@@ -58,7 +58,7 @@ jobs:
 
     steps:
       - checkout: self
-      - template: ../templates/core-build.yaml
+      - template: ./templates/core-build.yaml
         parameters:
           name: Node_18
           nodeVersion: 18.12.x
