--- a/common/config/azure-pipelines/templates/integration-test-steps.yaml
+++ b/common/config/azure-pipelines/templates/integration-test-steps.yaml
@@ -1,5 +1,5 @@
 parameters:
-  - name: Node_Version # name of the parameter; required
+  - name: nodeVersion # name of the parameter; required
     type: string # data type of the parameter; required
 
 steps:
@@ -10,9 +10,9 @@ steps:
   - template: setup-integration-users.yaml
 
   - task: NodeTool@0
-    displayName: "Use Node ${{ parameters.Node_Version }}"
+    displayName: "Use Node ${{ parameters.nodeVersion }}"
     inputs:
-      versionSpec: "${{ parameters.Node_Version }}"
+      versionSpec: "${{ parameters.nodeVersion }}"
       checkLatest: true
 
   - script: "git config --local user.email imodeljs-admin@users.noreply.github.com"
@@ -93,7 +93,7 @@ steps:
     displayName: "Publish Backend Test Results"
     inputs:
       testResultsFiles: "full-stack-tests/backend/lib/test/junit_results.xml"
-      testRunTitle: "Core - Backend Tests - ${{ parameters.Node_Version }}"
+      testRunTitle: "Core - Backend Tests - ${{ parameters.nodeVersion }}"
     continueOnError: true
     condition: succeededOrFailed()
 
@@ -101,40 +101,40 @@ steps:
     displayName: "Publish Core Integration Test Results"
     inputs:
       testResultsFiles: "full-stack-tests/core/lib/test/junit_results.xml"
-      testRunTitle: "Core - Integration Tests - ${{ parameters.Node_Version }}"
+      testRunTitle: "Core - Integration Tests - ${{ parameters.nodeVersion }}"
     condition: succeededOrFailed()
 
   - task: PublishTestResults@2
     displayName: "Publish ECSchema Rpc Interface Integration Test Results"
     inputs:
       testResultsFiles: "full-stack-tests/ecschema-rpc-interface/ecschema-rpcinterface-tests-result/ecschema-rpcinterface-tests-result.xml"
-      testRunTitle: "ECSchema Rpc Interface - Integration Tests - ${{ parameters.Node_Version }}"
+      testRunTitle: "ECSchema Rpc Interface - Integration Tests - ${{ parameters.nodeVersion }}"
     condition: succeededOrFailed()
 
   - task: PublishTestResults@2
     displayName: "Publish RPC Full Stack Test Results"
     inputs:
       testResultsFiles: "full-stack-tests/rpc/lib/test/junit_results.xml"
-      testRunTitle: "RPC Full Stack - ${{ parameters.Node_Version }}"
+      testRunTitle: "RPC Full Stack - ${{ parameters.nodeVersion }}"
     condition: succeededOrFailed()
 
   - task: PublishTestResults@2
     displayName: "Publish Rpc Interface Integration Test Results"
     inputs:
       testResultsFiles: "full-stack-tests/rpc-interface/full_stack_test_results/full_stack_test_result.xml"
-      testRunTitle: "Rpc Interface - Integration Tests - ${{ parameters.Node_Version }}"
+      testRunTitle: "Rpc Interface - Integration Tests - ${{ parameters.nodeVersion }}"
     condition: succeededOrFailed()
 
   - task: PublishTestResults@2
     displayName: "Publish Presentation Integration Test Results"
     inputs:
       testResultsFiles: full-stack-tests/presentation/lib/test/junit_results.xml
-      testRunTitle: "Presentation - Integration Tests - ${{ parameters.Node_Version }}"
+      testRunTitle: "Presentation - Integration Tests - ${{ parameters.nodeVersion }}"
     condition: succeededOrFailed()
 
   - task: PublishTestResults@2
     displayName: "Publish Electron Test Results"
     inputs:
       testResultsFiles: core/electron/lib/test/*_junit_results.xml
-      testRunTitle: "Core - Electron Tests - ${{ parameters.Node_Version }}"
+      testRunTitle: "Core - Electron Tests - ${{ parameters.nodeVersion }}"
     condition: succeededOrFailed()
