Fix regression testing machine pool

--- a/common/config/azure-pipelines/jobs/regression-testing.yaml
+++ b/common/config/azure-pipelines/jobs/regression-testing.yaml
@@ -19,7 +19,7 @@ schedules:
 jobs:
   - job:
     variables:
-      - name: linuxPool
+      - name: linux_pool
         value: "iModeljs Linux"
       - name: mac_pool
         value: iModelTechCI
@@ -110,6 +110,7 @@ jobs:
       maxParallel: 3
 
     pool:
+      name: $(name)
       demands:
         - Agent.OS -equals $(platform)
 
