--- a/common/config/azure-pipelines/integration-client-regression-pr-validation.yaml
+++ b/common/config/azure-pipelines/integration-client-regression-pr-validation.yaml
@@ -12,11 +12,11 @@ variables:
   - group: iModel.js Integration Test Users
 
 jobs:
-  - job: Node_14_x
+  - job: Node_18_x
     condition: succeeded()
     pool:
       vmImage: ubuntu-latest
     steps:
       - template: templates/integration-test-steps.yaml
         parameters:
-          Node_Version: 14.x
+          nodeVersion: 18.x
