set `NODE_ENV=development` in workspace settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -116,7 +116,13 @@
     "editor.action.fixAll": true, // Run the default formatter before eslint, it handles whitespace better
     "source.fixAll.eslint": true // then run ESLint auto-fix
   },
-  "cSpell.words": [
-    "Discoverability"
-  ],
+  "terminal.integrated.env.windows": {
+    "NODE_ENV": "development"
+  },
+  "terminal.integrated.env.linux": {
+    "NODE_ENV": "development"
+  },
+  "terminal.integrated.env.osx": {
+    "NODE_ENV": "development"
+  },
 }
