--- a/common/config/azure-pipelines/jobs/regression-testing.yaml
+++ b/common/config/azure-pipelines/jobs/regression-testing.yaml
@@ -1,8 +1,8 @@
 # iTwin.js Core Regression Testing Build
 #
-# Tests all supported versions of iTwin.js on 3 main supported platforms; Windows 10, Ubuntu 20.04, and MacOS .
+# Tests all supported versions of iTwin.js on 3 main supported platforms; Windows 10, Ubuntu 20.04, and MacOS.
 #
-# Starts with the minimum version (currently 12.20.0) and then follows the tip of each subsequent minor version.
+# Starts with the minimum version (currently 12.20.0) and then follows the tip of each subsequent major LTS (even-numbered) version.
 #
 # The current LTS is tested in all normal CI/PR builds so no need to test it here.
 
@@ -19,7 +19,7 @@ schedules:
 jobs:
   - job:
     variables:
-      - name: linuxPool
+      - name: linux_pool
         value: "iModeljs Linux"
       - name: mac_pool
         value: iModelTechCI
@@ -28,21 +28,21 @@ jobs:
 
     strategy:
       matrix:
-        "Windows_Node_18":
+        "Windows_Node_18_12_0":
           OS: windows-latest
           platform: Windows_NT
           name: $(win_pool)
-          node_version: 18.x
-        "Linux_Node_18":
+          node_version: 18.12.0
+        "Linux_Node_18_12_0":
           OS: ubuntu-latest
           platform: Linux
           name: $(linux_pool)
-          node_version: 18.x
-        "MacOS_Node_18":
+          node_version: 18.12.0
+        "MacOS_Node_18_12_0":
           OS: macOS-latest
           platform: Darwin
           name: $(mac_pool)
-          node_version: 18.x
+          node_version: 18.12.0
 
         "Windows_Node_16":
           OS: windows-latest
@@ -91,29 +91,14 @@ jobs:
           platform: Darwin
           name: $(mac_pool)
           node_version: 12.x
-
-        "Windows_Node_12_22":
-          OS: windows-latest
-          platform: Windows_NT
-          name: $(win_pool)
-          node_version: 12.22.0
-        "Linux_Node_12_22":
-          OS: ubuntu-latest
-          platform: Linux
-          name: $(linux_pool)
-          node_version: 12.22.0
-        "MacOS_Node_12_22":
-          OS: macOS-latest
-          platform: Darwin
-          name: $(mac_pool)
-          node_version: 12.22.0
       maxParallel: 3
 
     pool:
+      name: $(name)
       demands:
         - Agent.OS -equals $(platform)
 
-    timeoutInMinutes: 120
+    timeoutInMinutes: 60
 
     workspace:
       clean: all
