--- a/common/config/azure-pipelines/ci.yaml
+++ b/common/config/azure-pipelines/ci.yaml
@@ -25,28 +25,14 @@ schedules:
 
 jobs:
   - job:
-    variables:
-      - name: linuxPool
-        value: "iModeljs Linux"
-      - name: mac_pool
-        value: iModelTechCI
-      - name: win_pool
-        value: iModelTechCI
-
     strategy:
       matrix:
         "Windows_Node_18":
           OS: windows-latest
-          platform: Windows_NT
-          name: $(win_pool)
         "Linux_Node_18":
           OS: ubuntu-latest
-          platform: Linux
-          name: $(linux_pool)
         "MacOS_Node_18":
           OS: macOS-latest
-          platform: Darwin
-          name: $(mac_pool)
 
     pool:
       vmImage: $(OS)
@@ -58,9 +44,6 @@ jobs:
 
     steps:
       - checkout: self
-      - template: ../templates/core-build.yaml
+      - template: ./templates/core-build.yaml
         parameters:
-          name: Node_18
-          nodeVersion: 18.12.x
-          pool:
-            vmImage: $(OS)
+          nodeVersion: 18.x
