--- a/domains/analytical/backend/package.json
+++ b/domains/analytical/backend/package.json
@@ -5,7 +5,7 @@
   "typings": "lib/cjs/analytical-backend",
   "license": "MIT",
   "engines": {
-    "node": ">=12.22.0 < 14.0 || >=14.17.0 < 19.0"
+    "node": ">=16.13.0 < 19.0"
   },
   "scripts": {
     "build": "tsc 1>&2 --outDir lib/cjs && npm run -s copy:test-assets",
