--- a/presentation/opentelemetry/package.json
+++ b/presentation/opentelemetry/package.json
@@ -4,7 +4,7 @@
   "description": "Package for making interop between OpenTelemetry and iTwin.js Presentation types easier.",
   "license": "MIT",
   "engines": {
-    "node": ">=12.22.0 < 14.0 || >=14.17.0 < 19.0"
+    "node": ">=16.13.0 < 19.0"
   },
   "repository": {
     "type": "git",
